Fixing wrapping tag layout on dashboard (#723)
* update tag styling on dashboard for better wrapping

* removing changes

* fixing layout of tags

--- a/services/app-web/src/pages/Dashboard/Dashboard.module.scss
+++ b/services/app-web/src/pages/Dashboard/Dashboard.module.scss
@@ -61,6 +61,7 @@
 
 .programTag {
     background: $cms-color-primary;
+    display: inline-block;
 }
 
 .submittedTag {
